crates/uselesskey-core-jwk-shape/tests/snapshots/snapshots_jwk_shape__ec_private_jwk_shape.snap
---
source: crates/uselesskey-core-jwk-shape/tests/snapshots_jwk_shape.rs
expression: value
---
alg: ES256
crv: P-256
d: "[REDACTED]"
kid: ec-priv-1
kty: EC
use: sig
x: "[REDACTED]"
y: "[REDACTED]"
