crates/uselesskey-core-jwk-shape/tests/snapshots/snapshots_jwk_shape__ec_public_jwk_shape.snap
---
source: crates/uselesskey-core-jwk-shape/tests/snapshots_jwk_shape.rs
expression: value
---
alg: ES256
crv: P-256
kid: ec-pub-1
kty: EC
use: sig
x: "[REDACTED]"
y: "[REDACTED]"
