crates/uselesskey-core-jwk-shape/tests/snapshots/snapshots_jwk_shape__jwks_display_check.snap
---
source: crates/uselesskey-core-jwk-shape/tests/snapshots_jwk_shape.rs
expression: check
---
has_keys_array: true
key_count: 1
