crates/uselesskey-core-jwk-shape/tests/snapshots/snapshots_jwk_shape__oct_jwk_shape.snap
---
source: crates/uselesskey-core-jwk-shape/tests/snapshots_jwk_shape.rs
expression: value
---
alg: HS256
k: "[REDACTED]"
kid: oct-1
kty: oct
use: sig
