crates/uselesskey-core-jwk-shape/tests/snapshots/snapshots_jwk_shape__okp_private_jwk_shape.snap
---
source: crates/uselesskey-core-jwk-shape/tests/snapshots_jwk_shape.rs
expression: value
---
alg: EdDSA
crv: Ed25519
d: "[REDACTED]"
kid: okp-priv-1
kty: OKP
use: sig
x: "[REDACTED]"
