crates/uselesskey-core-jwk-shape/tests/snapshots/snapshots_jwk_shape__private_jwk_enum_variants.snap
---
source: crates/uselesskey-core-jwk-shape/tests/snapshots_jwk_shape.rs
expression: infos
---
- variant: Rsa
  kid: rsa-p-1
  kty: RSA
- variant: Ec
  kid: ec-p-1
  kty: EC
- variant: Okp
  kid: okp-p-1
  kty: OKP
- variant: Oct
  kid: oct-p-1
  kty: oct
