crates/uselesskey-core-jwk-shape/tests/snapshots/snapshots_jwk_shape__rsa_private_jwk_shape.snap
---
source: crates/uselesskey-core-jwk-shape/tests/snapshots_jwk_shape.rs
expression: value
---
alg: RS256
d: "[REDACTED]"
dp: "[REDACTED]"
dq: "[REDACTED]"
e: "[REDACTED]"
kid: rsa-priv-1
kty: RSA
n: "[REDACTED]"
p: "[REDACTED]"
q: "[REDACTED]"
qi: "[REDACTED]"
use: sig
