crates/uselesskey-core-jwk-shape/tests/snapshots/snapshots_jwk_shape__rsa_public_jwk_shape.snap
---
source: crates/uselesskey-core-jwk-shape/tests/snapshots_jwk_shape.rs
expression: value
---
alg: RS256
e: "[REDACTED]"
kid: rsa-pub-1
kty: RSA
n: "[REDACTED]"
use: sig
